# COSC-320-Project

c4_rust/: Cargo.toml  README.md
c4_rust/src/: error.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol.rs  types.rs  vm.rs
c4_rust/tests/: c4_basics_tests.rs  complier_tests.rs  lexer_tests.rs  parser_tests.rs  setup.rs  symbol_tests.rs  vm_tests.rs
