[package]
name = "c4_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]
description = "Rust implementation of the C4 compiler"
readme = "README.md"
license = "MIT"

[lib]
name = "c4_rust"
path = "src/lib.rs"

[dependencies]
# No external dependencies required

[dev-dependencies]
pretty_assertions = "1.3"

[profile.release]
opt-level = 3
lto = true