[package]
name = "c4_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the C4 compiler"
license = "MIT"
repository = "https://github.com/yourusername/c4_rust"
readme = "README.md"

[dependencies]
# No external dependencies for the core compiler

[dev-dependencies]
pretty_assertions = "1.4.0"  # For more readable test failures

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1